- add lodash - sorting text value of date picker field and selection field - fix selection field dropdown on mobile view size incorrect

--- a/src/components/selection-field/styles.scss
+++ b/src/components/selection-field/styles.scss
@@ -70,8 +70,6 @@
 .dropdown-menu-selection-mobile-box{
     @include index.dropdown-menu-box-style;
 
-    width: 200px;
-
     .dropdown-menu-mobile-content{
         @include selection-field-content-style;
 
